--- a/Cadastro.css
+++ b/Cadastro.css
@@ -8,7 +8,7 @@
 .cabecalho{
   color:white;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', sans-serif;
-  font-weight: 900;
+  font-weight: 500;
   width: 100%;
   height: 50px;
   background-color: #2A2A2A;
@@ -119,7 +119,7 @@ body{
 }
 
 
-#confirma{
+#submit{
   margin-top: 20px;
   border-style: hidden;
   position: relative;
