--- a/EditarPerfil.css
+++ b/EditarPerfil.css
@@ -82,14 +82,14 @@ overflow: hidden;
 }
 
 /*Corpo da página*/
-
+/*Configurando background*/
 .background{
-background-color: rgb(240,240,240);
+background-color: #F0F0F0;
 background-size: cover;
-overflow: hidden;
-position: absolute;
-top: 9.9%;
-bottom: 0;
-width: 100%;
-height: 150%;
+}
+
+.form{
+    background-color: #FFFFFF;
+    background-size: cover;
+    /*Configure a posição*/
 }
