--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,13 +18,25 @@
         <a class="nav-link" routerLink="/about">About</a>
       </li>
       
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/signup">Sign Up</a>
-      </li>
+      <ng-template [ngIf]="user == undefined && user == null" [ngIfElse]="logged">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/signup">Sign Up</a>
+        </li>
+  
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+       </ng-template>
+       
+       <ng-template #logged>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link">{{user.name}}</a>
+        </li>
 
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/login">Login</a>
-      </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" href="#" (click)="logout()">Logout</a>
+        </li>
+       </ng-template>
       
     </ul>
   </div>
