--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,16 +1,16 @@
 <div class="submain">
-    <form method="POST" action="">
+    <form method="POST" (submit)="login(email.value, password.value)">
         <h1 class="rows login-title">Login</h1>
         <div class="formbox">
             <div class="inputboxes">
                 <div class="form-group">
-                  <input type="text" class="form-control" name="e-mail" placeholder="E-mail" [(ngModel)]="data.email" required >
+                  <input type="text" class="form-control" placeholder="E-mail" #email required >
                 </div>
             <div class="form-group">
-                <input type="password" class="form-control" name="senha" placeholder="Password" [(ngModel)]="data.password" required>
+                <input type="password" class="form-control" placeholder="Password" #password required>
             </div>
             </div>
-            <input id="submit" type="submit" (click)="login(data)" name="Entrar" value="Login">
+            <input id="submit" type="submit" name="Entrar" value="Login">
         </div>
     </form>
     <div style="margin-left: 80px;">
