alteração na cor

--- a/Release/Avali8-FE/forgotpassword/forgotpass.css
+++ b/Release/Avali8-FE/forgotpassword/forgotpass.css
@@ -159,7 +159,7 @@ footer i{
     border-radius: 2px;
     border: none;
     width: 100%;
-    background: #3E3E3E;
+    background: #0761E2;
     color: #fff;
     font-weight: 800;
     cursor: pointer;
